# hi

./: stack.yaml
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/HW3/: Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
