name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Georgiy Nazarov
maintainer:          geranazavr555@yandex.ru
copyright:           2021 Author name here
                        
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.10.7

library
  hs-source-dirs:      src
  exposed-modules:
    HW3.Base,
    HW3.Parser,
    HW3.Pretty,
    HW3.Evaluator
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5,
                       megaparsec,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       parser-combinators,
                       mtl,
                       scientific,
                       text,
                       containers,
                       bytestring,
                       zlib,
                       serialise
  default-language:    Haskell2010

executable hi
  main-is:            Main.hs
  hs-source-dirs:
    app
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base >= 4.9 && < 5,
                      haskeline,
                      megaparsec,
                      hw3
  default-language:   Haskell2010